# mimica

./: .env.example  .gitignore  DEMO_GUIDE.md  DEMO_QUICK_REFERENCE.md  FULL-FLOW-PLANNING-COMPLETE.md  INTEGRATION-EXAMPLE.md  MIGRATION-SUMMARY.md  MIMICA_HACKATHON_PLAN.md  PERSONAS-REFERENCE.md  PLAN-THEN-EXECUTE-IMPLEMENTATION.md  PLAN-THEN-EXECUTE-SUMMARY.md  PLANNING-STRATEGIES-COMPARISON.md  QUICKSTART-PLAYWRIGHT-PYTHON.md  README-PLAYWRIGHT-PYTHON.md  README-PLAYWRIGHT.md  README.md  READY-FOR-DEMO.md  SCRIPTED-DEMO-QUICKSTART.md  SCRIPTED-FLOWS-SCHEMA.md  SCRIPTED-PERSONAS-IMPLEMENTATION.md  package-lock.json  package.json  playwright.config.ts  pyrightconfig.json
backend/: README.md  pyproject.toml
backend/data/knowledge/: tkf_init_knowledge.json
backend/data/personas/: power_user_explorer.json
backend/playwright-runs/run-1765364205873/: events.json  metadata.json  video.webm
backend/playwright-runs/run-1765373185435/: events.json  metadata.json  video.webm
backend/playwright-runs/run-accessibility_screen_reader-1765375985868/: events.json  metadata.json  video.webm
backend/playwright-runs/run-impatient_new_user-1765375889116/: events.json  metadata.json  video.webm
backend/playwright-runs/run-llm-1765364405721/: events.json  metadata.json
backend/src/: config.py  data_models.py  debug.py  event_listener.py  event_store.py  event_utils.py  knowledge_extractor.py  knowledge_generator.py  main.py  persona_repository.py  personas.py  seeds.py  tkf.py  tkf_store.py  tracking.py  utils.py  workflow.py
backend/tests/: test_knowledge_generator.py
(+109 files in other folders)
